# WalkingSpider_OpenAI_PyBullet

./: .gitignore  FINAL_SUMMARY.txt  INSTALL_PYBULLET_WINDOWS.md  MUJOCO_LOG.TXT  PROJECT_STATUS.md  PROJECT_STRUCTURE.txt  README.md  ReadMe.md  ReadMe_orig.md  SETUP_AND_DEBUG_REPORT.md  SETUP_GUIDE.md  TEST_RESULTS.txt  WIXI_PYBULLET_LOG.TXT  analyze_spider_logs.py  baselines_test.py  commands.md  commands.txt  cura.3mf  demo_walkingspider_simulation.py  demo_walkingspider_visual.py  mujoco_test.py  ppo2_robotschool_ant_v2.pkl  pybullet_testing_env.py  pybullet_testing_frame_env.py  pyproject.toml  requirements.txt  robotschool_test.py  run_test_with_full_debug.py  setup_environment_conda.bat  setup_environment_conda.sh  testFile  test_gym_spider_env.py  test_pybullet_simple.py  test_spider_with_logging.py  test_with_gif_recording.py  test_without_pybullet_gui.py  walking_spider.yml
environment/walking-spider/: setup.py
environment/walking-spider/walking_spider/: __init__.py
environment/walking-spider/walking_spider.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
environment/walking-spider/walking_spider/envs/: __init__.py  debug_logger.py  gif_recorder.py  walking_spider_env.py
environment/walking-spider/walking_spider/envs/meshes/: base.stl
environment/walking_spider/: __init__.py
environment/walking_spider/envs/: __init__.py  balancebot_env.py  balancebot_env_noise.py  walking_spider.py
experience_learned/: ppo2_WalkingSpider_v0.pkl  ppo2_WalkingSpider_v0_testing.pkl  ppo2_WalkingSpider_v0_testing_2.pkl  ppo2_WalkingSpider_v0_testing_3.pkl  ppo2_ant_v2.pkl  ppo2_cartpole.pkl  ppo2_robotschool_ant_v2_2.pkl
files/: Battery_cover.stl  Servo_leg_MG90.stl  Top_cover.stl  Top_wall.stl
logs/: LOGGING_GUIDE.txt  MUJOCO_ANT_LOG.TXT  pybullet_reward_log.txt
output/: .gitkeep
scripts/: demo_trained_spider.py  setup_environment.sh  train_ppo.py
src/: spider.urdf  spider.xml  spider_simple.urdf  walking_spider_env.py
src/meshes/: base.obj.mtl  base.stl  leg.stl  servo_joint.stl
tests/: ant.py  minitaur.py  pybullet_testing_env.py  pybullet_testing_frame_env.py  robotschool_test.py
venv_spider/: pyvenv.cfg
venv_spider/Scripts/: activate  activate.bat
