[tool.poetry]
name = "walking-spider"
version = "1.1.0"
description = "AI-powered quadruped robot walking simulator using PyBullet and OpenAI Gym with reinforcement learning"
authors = ["Ruben <ruben@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/WalkingSpider_OpenAI_PyBullet"
keywords = ["robot", "reinforcement-learning", "pybullet", "gym", "spider", "simulation", "walking"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.8"

# Core dependencies
numpy = "^1.24.0"
scipy = "^1.10.0"

# Robot simulation and environments
pybullet = "^3.1.0"
gym = "^0.26.0"

# Reinforcement learning
stable-baselines = "^2.10.0"
stable-baselines3 = "^2.0.0"

# Deep learning
tensorflow = "^2.13.0"
keras = "^2.13.0"
torch = "^2.0.0"
torchvision = "^0.15.0"

# Data processing and utilities
pandas = "^2.0.0"
matplotlib = "^3.7.0"
pillow = "^10.0.0"
opencv-python = "^4.8.0"
h5py = "^3.8.0"
imageio = "^2.31.0"
imageio-ffmpeg = "^0.4.8"

# Development and utilities
jupyter = "^1.0.0"
notebook = "^7.0.0"
ipython = "^8.12.0"
ipykernel = "^6.25.0"
pytest = "^7.4.0"
black = "^23.9.0"
flake8 = "^6.1.0"
pylint = "^2.17.0"
mypy = "^1.5.0"

# Optional: Additional RL environments
atari-py = {version = "^0.2.9", optional = true}
box2d-py = {version = "^2.3.8", optional = true}
mujoco-py = {version = "^2.1.0", optional = true}

# Optional: Monitoring and visualization
tensorboard = {version = "^2.13.0", optional = true}
wandb = {version = "^0.15.0", optional = true}

[tool.poetry.extras]
atari = ["atari-py"]
box2d = ["box2d-py"]
mujoco = ["mujoco-py"]
monitoring = ["tensorboard", "wandb"]
all-extras = ["atari-py", "box2d-py", "mujoco-py", "tensorboard", "wandb"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
flake8 = "^6.1.0"
pylint = "^2.17.0"
mypy = "^1.5.0"
isort = "^5.12.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
